<resources>
    <string name="app_name">Central Perk</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">todo</string>
    <string name="product_name">product_name</string>
    <string name="product_description">product_description</string>
    <string name="product_price">product_price</string>
    <string name="add_to_cart">add_to_cart</string>
</resources>