<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#7E57C2"
    tools:context=".ProductDetailsActivity">

    <ImageView
        android:id="@+id/product_image_details"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_image_details"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="#C62828"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name_details"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/product_description"
        android:textColor="#C62828"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description_details"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/product_price"
        android:textColor="#C62828"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/number_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:elevation="60dp"
        app:backGroundColor="#A81E1E"
        app:finalNumber="10"
        app:initialNumber="1"
        app:textSize="16sp">

        <Button
            android:id="@+id/pd_add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="#FFCA28"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorOnSecondary"
            android:textSize="18sp" />

    </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>


</RelativeLayout>